--- a/index.html
+++ b/index.html
@@ -23,6 +23,15 @@
             <p>Código de partida: <span id="gameCode"></span></p>
             <p>Comparte este código con tu oponente</p>
             <div class="loading">⚽ Cargando...</div>
+            <div style="margin-top: 20px; font-size: 0.9em; opacity: 0.8;">
+                <p>💡 <strong>Consejos:</strong></p>
+                <p>• Asegúrate de que ambos tengan buena conexión a internet</p>
+                <p>• Si no funciona, ambos pueden intentar recargar la página</p>
+                <p>• Funciona mejor en Chrome, Firefox o Safari</p>
+            </div>
+            <button id="retryConnectionBtn" class="btn-secondary" style="margin-top: 20px; display: none;">
+                🔄 Reintentar Conexión
+            </button>
         </div>
 
         <!-- Pantalla de juego -->
