--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <p>¡Duelo de penales en tiempo real!</p>
             <button id="createGameBtn" class="btn-primary">Crear Partida</button>
             <button id="joinGameBtn" class="btn-secondary">Unirse a Partida</button>
-            <input type="text" id="gameCodeInput" placeholder="Código de partida" style="display: none;">
+            <input type="text" id="gameCodeInput" placeholder="Código de partida (6 caracteres)" maxlength="6" style="display: none;">
         </div>
 
         <!-- Pantalla de espera -->
